--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -22,7 +22,7 @@ env:
   # canary next-swc binaries in the monorepo
   NEXT_SKIP_NATIVE_POSTINSTALL: 1
   DATADOG_API_KEY: ${{ secrets.DATA_DOG_API_KEY }}
-  DATADOG_TRACE_NEXTJS_TEST: 'true'
+  NEXT_JUNIT_TEST_REPORT: 'true'
   DD_ENV: 'ci'
   TEST_TIMINGS_TOKEN: ${{ secrets.TEST_TIMINGS_TOKEN }}
   NEXT_TEST_JOB: 1
@@ -240,11 +240,36 @@ jobs:
         'test-turbopack-dev',
         'test-turbopack-integration',
       ]
-    uses: ./.github/workflows/build_reusable.yml
-    with:
-      skipForDocsOnly: 'yes'
-      uploadTestTrace: 'yes'
-    secrets: inherit
+    if: always()
+    runs-on: ubuntu-latest
+    name: report test results to datadog
+    steps:
+      - name: Download test report artifacts
+        id: download-test-reports
+        uses: actions/download-artifact@v3
+        with:
+          name: test-report
+          path: test
+
+      - name: Install datadog cli tools
+        run: |
+          npm install -g junit-report-merger@6.0.2 @datadog/datadog-ci@2.14.0
+
+      - name: Upload test report to datadog
+        run: |
+          if [ -d ./test/test-junit-report ]; then
+            jrm ./nextjs-test-result-junit.xml "test/test-junit-report/**/*.xml"
+
+            # Add a `test.type` tag to distinguish between turbopack and next.js runs
+            DD_ENV=ci datadog-ci junit upload --tags test.type:nextjs --service nextjs ./nextjs-test-result-junit.xml
+          fi
+
+          if [ -d ./test/turbopack-test-junit-report ]; then
+            jrm ./turbopack-test-result-junit.xml "test/turbopack-test-junit-report/**/*.xml"
+
+            # Add a `test.type` tag to distinguish between turbopack and next.js runs
+            DD_ENV=ci datadog-ci junit upload --tags test.type:turbopack --service nextjs ./turbopack-test-result-junit.xml
+          fi
 
   tests-pass:
     needs:
